  do_page_up(), do_page_down()
	- If there's less than a page of text onscreen, just call
	  do_(first|last)_line(). (DLR)
  do_para_begin(), do_para_begin_void(), do_para_end(),
  do_para_end_void(), do_next_word(), do_next_word_void(),
  do_prev_word(), do_prev_word_void()
	- Move here from nano.c, as they're movement functions, and also
	  make them call check_statusblank().
- nano.c:
  usage()
	- Properly mention the support for "[+LINE,COLUMN]" on the
	  command line when HAVE_GETOPT_LONG isn't defined. (DLR)
	- Remove unneeded translation of "--quickblank". (DLR)
  do_verbatim_input()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  do_next_word()
	- Rework to be more like do_prev_word(), to avoid a potential
	  problem if we start at the end of a line. (DLR)
  do_mouse()
	- Avoid redundant screen updates by using edit_redraw() instead
	  of edit_refresh(), and remove now-erroneous code that disables
	  setting the mark while in view mode. (DLR)
  do_output()
	- When adding a character, just add its length in bytes to
	  current_x instead of calling do_right(), and set placewewant
	  afterward. (DLR)
  do_alt_speller()
	- If we can't invoke the spell checker, use sprintf() instead of
	  snprintf() to write the error string we return, as the one
	  formatted value is a simple string, and so altspell_error will
	  always be long enough to hold it.  Also remove unnecessary
	  initialization of altspell_error, refactor so that msglen is
	  no longer needed, and make the error message more similar to
	  what the internal spell checker returns under the same
	  circumstances. (DLR)
	- Block any pending SIGWINCHes while the alternate spell checker
	  is running, so that it can handle them, and unblock them once
	  it's finished and we've loaded the spell-checked file back in.
	  (DLR)
	- Use doupdate() to reenter curses mode instead of refresh().
	  (DLR)
  do_spell()